# thor_core

./: .gitignore
build-thor_math-Desktop-Debug/: CMakeCache.txt
thor_math/: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  package.xml
thor_math/cmake_config/: thor_mathConfig.cmake
thor_math/include/thor_math/: thor_math.h
thor_math/launch/: test_thor.launch
thor_math/src/: test_evolution_matrix.cpp  test_thor_clik.cpp  test_thor_math.cpp  test_thor_math2.cpp  test_thor_ur10.cpp
thor_math/src/thor_math/: thor_math.cpp
thor_prefilter/: CMakeLists.txt  package.xml  thor_prefilter.kdev4
thor_prefilter/.kdev4/: thor_prefilter.kdev4
thor_prefilter/include/thor_prefilter/: thor_prefilter.h
thor_prefilter/src/: test_prefilter.cpp
thor_prefilter/src/thor_prefilter/: thor_prefilter.cpp
