<?xml version="1.0"?>
<package format="2">
  <name>thor_math</name>
  <version>0.0.0</version>
  <description>The thor_math package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="iras@itia.cnr.it">Jane Doe</maintainer> -->
  <maintainer email="iras@itia.cnr.it">maxwell</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>cmake</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
